fix: shrinking page width allows wrapping and car shrinking

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,8 @@
-* {
-    /* outline: 2px solid red; */
-}
-
 body {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: center;
-
-    /* background-color: hsl(46, 83%, 49%); */
     background-color: lavender;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -42,11 +36,14 @@ a {
 }
 
 .card {
+    margin: auto;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 10px;
+    text-align: left;
 
     border: 10px solid black;
     background-color: lightgoldenrodyellow;
@@ -60,14 +57,14 @@ a {
 }
 
 .recipe {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    gap: 16px;
+    text-align: center;
 }
 
 .recipe .card {
-    width: 700px;
+    max-width: 700px;
     min-width: 250px;
+}
+
+.menu .card {
+    align-items: center;
 }
